Fixed problem of sending ERROR to client after OK or EOF (BUG#6804)

include/mysql_com.h:
  Flag which prevent sending error after EOF or OK sent
mysql-test/r/kill.result:
  test of blocking of sending ERROR after OK or EOF
mysql-test/t/kill.test:
  test of blocking of sending ERROR after OK or EOF
sql/item_func.cc:
  typo fixed
sql/net_serv.cc:
  initialization of flag
sql/protocol.cc:
  check and set of flag no_send_error
sql/sql_parse.cc:
  droping flag no_send_error before new command/query execution